# ai-study

./: README.md
agentwebhook/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
ai-agent/: .gitignore  README.md
ai-agent/chatbot-agent/: chatbot_crew.py  crew_with_code.py  crew_with_yaml.py  db.py  env.py  langgraph.py  main.py  memory_db.py  pyproject.toml  tools.py
ai-agent/chatbot-agent/config/: agents.yaml  tasks.yaml
ai-agent/english-tutor-agent/: env.py  main.py  pyproject.toml  tools.py  tutor_crew.py  tutor_crew_rag.py  utils.py
ai-agent/news-agent/: bot.py  bot_main.py  main.py  news_crew.py  pyproject.toml  tools.py
ai-agent/news-agent/prompt/: bot.md  tdd.md
gourmetbot/: README.md  build.gradle.kts  settings.gradle.kts
koding-agents/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
langchain/: basic_ex.py
n8n/: README.md  email_chat_bot.json  enhanced_qna_bot.json  google_drive_file_download.json  qna_bot.json  qna_bot_with_agent.json  reply_to_email.json  scrap_naver_news.json  scrap_news.json  text_to_query.json  text_to_query_get_schema.json  text_to_query_optimization.json  text_to_query_to_slack.json
n8n/agent-usecases/: code_review_agent.py  create_table.py  data_processing.py  data_processing_2.py  email_agent.py  extract_text_from_video.py  extract_text_from_video_mcp.py  insert_data.py  langgraph_qna.py  main.py  pyproject.toml  qna_agent.py  update_table.py  youtube_summary.py
onboard_bolt/: app.py  backend.py  requirements.txt  system_prompt.md  vectorstore.py
slack_bolt_basic/: README.md  app.py  requirements.txt
sql_bolt/: system_prompt.md  user_prompt.md
(+188 files in other folders)
