[project]
name = "news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[google-genai,tools]>=0.177.0",
    "dotenv>=0.9.9",
    "python-telegram-bot[job-queue]>=22.3",
    "firecrawl-py>=3.4.0",
    "feedparser>=6.0.11",
]
